--- a/lams_tool_dimdim/web/WEB-INF/web.xml
+++ b/lams_tool_dimdim/web/WEB-INF/web.xml
@@ -3,9 +3,9 @@
 <web-app xmlns="http://java.sun.com/xml/ns/j2ee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_3_1.xsd"
 	version="3.1">
-	<display-name>Eadventure</display-name>
+	<display-name>Dimdim</display-name>
 	<description>
-		Eadventure tool
+		Dimdim tool
 	</description>
 
 	<context-param>
@@ -35,7 +35,7 @@
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 
-	<<servlet>
+	<servlet>
 		<servlet-name>spring</servlet-name>
 		<servlet-class>
 		org.springframework.web.servlet.DispatcherServlet
