--- a/lams_tool_deploy/.classpath
+++ b/lams_tool_deploy/.classpath
@@ -1,16 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src/java"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/lams_common"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="lib" path="/lams_build/deploy-tool/lib/commons-configuration-1.1.jar"/>
-	<classpathentry kind="lib" path="/lams_build/deploy-tool/lib/commons-dbutils-1.0.jar"/>
 	<classpathentry kind="lib" path="lib/ant/ant.jar"/>
-	<classpathentry kind="lib" path="/lams_build/deploy-tool/lib/commons-collections.jar"/>
-	<classpathentry kind="lib" path="/lams_build/deploy-tool/lib/commons-io-1.0.jar"/>
-	<classpathentry kind="lib" path="/lams_build/deploy-tool/lib/commons-lang-2.0.jar"/>
-	<classpathentry kind="lib" path="/lams_build/deploy-tool/lib/commons-logging.jar"/>
-	<classpathentry kind="lib" path="/lams_build/deploy-tool/lib/xstream-1.1.3.jar"/>
 	<classpathentry kind="lib" path="/lams_build/deploy-tool/lib/mysql-connector-java-8.0.11.jar" sourcepath="/3rdParty_sources/mysql-connector"/>
+	<classpathentry kind="lib" path="/lams_build/deploy-tool/lib/commons-io-2.4.jar"/>
+	<classpathentry kind="lib" path="/lams_build/deploy-tool/lib/xstream-1.5.0-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="/lams_build/deploy-tool/lib/commons-collections-3.2.2.jar"/>
+	<classpathentry kind="lib" path="/lams_build/deploy-tool/lib/commons-dbutils-1.7.jar"/>
+	<classpathentry kind="lib" path="/lams_build/deploy-tool/lib/commons-lang-2.6.jar"/>
+	<classpathentry kind="lib" path="/lams_build/deploy-tool/lib/commons-logging-1.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
